--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-ui": "^0.18.0",
     "mongoose": "^4.9.8",
     "react": "^15.5.4",
+    "react-color": "^2.11.7",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
