--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "socket.io-client": "^2.0.1"
   },
   "devDependencies": {
+    "prettier": "^1.3.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "find src -name '*.js' | xargs prettier --print-width 100 --tab-width 4 --use-tabs --single-quote --trailing-comma es5 --write src/**/**.js"
   }
 }
