--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "express": "^4.15.2",
     "formidable": "^1.1.1",
     "fs-extra": "^3.0.1",
+    "intl": "^1.2.5",
+    "intl-locales-supported": "^1.0.0",
     "material-ui": "^0.18.0",
+    "moment-timezone": "^0.5.13",
     "mongoose": "^4.9.8",
     "react": "^15.5.4",
     "react-color": "^2.11.7",
