--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "lit-indices",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "async": "^2.4.1",
-    "body-parser": "^1.17.1",
-    "cors": "^2.8.3",
-    "express": "^4.15.2",
-    "formidable": "^1.1.1",
-    "fs-extra": "^3.0.1",
-    "intl": "^1.2.5",
-    "intl-locales-supported": "^1.0.0",
-    "material-ui": "^0.18.0",
-    "moment-timezone": "^0.5.13",
-    "mongoose": "^4.9.8",
-    "react": "^15.5.4",
-    "react-color": "^2.11.7",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
-    "react-router-dom": "^4.1.1",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "socket.io": "^2.0.1",
-    "socket.io-client": "^2.0.1"
-  },
-  "devDependencies": {
-    "prettier": "^1.3.1",
-    "react-scripts": "0.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "server": "NODE_ENV=production node src/server",
-    "build": "mv build/uploads . && rm -rf build && react-scripts build && rm -rf build/uploads && mv uploads build ",
-    "eject": "react-scripts eject",
-    "prettier": "find src -name '*.js' | xargs prettier --print-width 100 --tab-width 4 --use-tabs --single-quote --trailing-comma es5 --write src/**/**.js"
-  }
+	"name": "lit-indices",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"async": "^2.4.1",
+		"body-parser": "^1.17.1",
+		"cors": "^2.8.3",
+		"express": "^4.15.2",
+		"formidable": "^1.1.1",
+		"fs-extra": "^3.0.1",
+		"intl": "^1.2.5",
+		"intl-locales-supported": "^1.0.0",
+		"material-ui": "^0.18.0",
+		"moment-timezone": "^0.5.13",
+		"mongoose": "^4.9.8",
+		"react": "^15.5.4",
+		"react-color": "^2.11.7",
+		"react-dom": "^15.5.4",
+		"react-redux": "^5.0.4",
+		"react-router-dom": "^4.1.1",
+		"react-sortable-hoc": "^0.6.8",
+		"react-tap-event-plugin": "^2.0.1",
+		"redux": "^3.6.0",
+		"redux-thunk": "^2.2.0",
+		"socket.io": "^2.0.1",
+		"socket.io-client": "^2.0.1"
+	},
+	"devDependencies": {
+		"prettier": "^1.3.1",
+		"react-scripts": "0.9.5"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"server": "NODE_ENV=production node src/server",
+		"build": "mv build/uploads . && rm -rf build && react-scripts build && rm -rf build/uploads && mv uploads build ",
+		"eject": "react-scripts eject",
+		"prettier": "find src -name '*.js' | xargs prettier --print-width 100 --tab-width 4 --use-tabs --single-quote --trailing-comma es5 --write src/**/**.js"
+	}
 }
